Bug 465849 - The Glide desktop effect always moves the window to the center of the screen during transition
Summary: The Glide desktop effect always moves the window to the center of the screen ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.27.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-16 15:55 UTC by Kyle
Modified: 2023-02-21 14:26 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.1
Sentry Crash Report:


Attachments
Screen recording of the observed result (1.80 MB, video/x-matroska)
2023-02-16 15:57 UTC, Kyle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kyle 2023-02-16 15:55:03 UTC
SUMMARY
When the Glide desktop effect is active / selected, appearing windows and dialogs always starts appearing at the center of the screen during the transition, and then snaps to the correct location after the transition is finished. When the window / dialog is closed, the window / dialog snaps to the center of the screen (regardless of its current position) before the transition starts.

STEPS TO REPRODUCE
1. System Settings → Workspace Behavior → Desktop Effects → Window Open/Close Animation → Choose "Glide" → Apply
2. Open a window (transition starts at center before snapping the window to the right position)
3. Close the window (window snaps to center before transition starts)

OBSERVED RESULT
As attached.

EXPECTED RESULT
The window will not snap to the center of the screen before a transition starts.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Linux 6.1.11-arch1-1-t2
KDE Plasma Version: Plasma 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Wayland session. The problem does not show on the other desktop effects like Fade or Scale.
Comment 1 Kyle 2023-02-16 15:57:29 UTC
Created attachment 156308 [details]
Screen recording of the observed result
Comment 2 Bartosz Taudul 2023-02-16 21:50:33 UTC
I also have this problem, but only when I have DPI scaling enabled.
Comment 3 Bug Janitor Service 2023-02-21 11:39:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3650
Comment 4 Vlad Zahorodnii 2023-02-21 12:13:30 UTC
Git commit c24a5f03959686cc72fdb3b83341529c2bee8568 by Vlad Zahorodnii.
Committed on 21/02/2023 at 11:54.
Pushed by vladz into branch 'master'.

effects/glide: Fix transform

Translation should be in logical pixels.

M  +1    -2    src/effects/glide/glide.cpp

https://invent.kde.org/plasma/kwin/commit/c24a5f03959686cc72fdb3b83341529c2bee8568
Comment 5 Vlad Zahorodnii 2023-02-21 13:00:45 UTC
Git commit e141fe80284eb2a35e0cd054c6b4dbd2fcf41b55 by Vlad Zahorodnii.
Committed on 21/02/2023 at 12:24.
Pushed by vladz into branch 'Plasma/5.27'.

effects/glide: Fix transform

Translation should be in logical pixels.


(cherry picked from commit c24a5f03959686cc72fdb3b83341529c2bee8568)

M  +1    -2    src/effects/glide/glide.cpp

https://invent.kde.org/plasma/kwin/commit/e141fe80284eb2a35e0cd054c6b4dbd2fcf41b55