effects/glide: Fix transform

Translation should be in logical pixels.

BUG: 465849